Fix bottom spacing and scrolling issues

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/launchpad/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/launchpad/style.scss
@@ -48,7 +48,7 @@
 	@include break-large {
 		max-width: 440px;
 		margin: 24px 20px 24px 40px;
-		height: 97vh;
+		height: 95vh;
 	}
 }
 
@@ -114,7 +114,7 @@
 }
 
 .launchpad__sidebar-admin-link {
-	padding: 80px 20px 40px;
+	padding: 80px 20px 10px;
 	display: none;
 	button {
 		text-decoration: underline;
@@ -245,12 +245,10 @@
 
 .launchpad__site-preview-wrapper {
 	margin: 16px;
-	height: 850px;
 	flex-grow: 1;
 
 	@include break-large {
 		margin: 73px 40px 12px 20px;
-		height: 900px;
 	}
 
 	.preview-toolbar__toolbar {
@@ -258,6 +256,11 @@
 		@include break-large {
 			display: block;
 		}
+	}
+
+	.web-preview__placeholder {
+		overflow-y: visible;
+		min-height: 720px;
 	}
 
 	.preview-toolbar__devices {
@@ -272,7 +275,6 @@
 				0 30px 20px rgba( 0, 0, 0, 0.03 ), 0 15px 13px rgba( 0, 0, 0, 0.02 ),
 				0 6px 5px rgba( 0, 0, 0, 0.02 ), 0 2px 3px rgba( 0, 0, 0, 0.01 );
 			max-width: 340px;
-			height: 680px;
 			border-radius: 40px; /* stylelint-disable-line scales/radii */
 		}
 	}
@@ -288,6 +290,7 @@
 		border-radius: 40px; /* stylelint-disable-line scales/radii */
 		box-sizing: border-box;
 		height: 780px;
+		height: 680px;
 		max-width: 95%;
 		box-shadow: 0 5px 15px rgba( 0, 0, 0, 0.07 ), 0 3px 10px rgba( 0, 0, 0, 0.04 );
 
